--- a/Unity_Game02/index.html
+++ b/Unity_Game02/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | PyExplorer_Minijuegos</title>
+    <!-- Poner Style en todos los juegos -->
+    <style>
+      ::-webkit-scrollbar {
+      display: none;
+      }
+    </style>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=1280 height=720 tabindex="-1" style="width: 1280px; height: 720px; background: #231F20"></canvas>
+    <canvas id="unity-canvas" tabindex="-1" style="width: 100%; background: #231F20;"></canvas>
     <script src="Build/PyExplorer OperationsGame.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
